<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiaoDien.MainActivity"
    android:orientation="vertical">


    <TextView
        style="@style/tieude"
        android:text="@string/infouser" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/makh"></TextView>

        <EditText
            style="@style/edittext"
            android:id="@+id/txtMaKH"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/tenkh"></TextView>

        <EditText
            style="@style/edittext"
            android:id="@+id/txtTenKH"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/ngaysinh"></TextView>

        <EditText
            style="@style/edittext"
            android:id="@+id/txtNgaySinh"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/diachi"></TextView>

        <EditText
            style="@style/edittext"
            android:id="@+id/txtDiaChi"></EditText>
    </LinearLayout>
    <TextView
        style="@style/tieude"
        android:text="@string/dichvu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbWin"
            style="@style/checkbox"
            android:text="@string/caiwin"></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Số lượng:"
            android:paddingLeft="180dp"></TextView>

        <Spinner
            android:id="@+id/SPCaiWin"
            style="@style/textviewSoLuong"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbMain"
            style="@style/checkbox"
            android:text="@string/suamain"></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Số lượng:"
            android:paddingLeft="165dp"></TextView>

        <Spinner
            android:id="@+id/SPMain"
            style="@style/textviewSoLuong"></Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbCPU"
            style="@style/checkbox"
            android:text="@string/suacpu"></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Số lượng:"
            android:paddingLeft="170dp"></TextView>

        <Spinner
            android:id="@+id/SPCPU"
            style="@style/textviewSoLuong"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/cbBanPhim"
            style="@style/checkbox"
            android:text="@string/suabanphim"></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Số lượng:"
            android:paddingLeft="140dp"></TextView>

        <Spinner
            android:id="@+id/SPBanPhim"
            style="@style/textviewSoLuong"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbChuot"
            style="@style/checkbox"
            android:text="@string/suachuot"></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Số lượng:"
            android:paddingLeft="165dp"></TextView>
        <Spinner
            style="@style/textviewSoLuong"
           android:id="@+id/SPChuot"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            style="@style/btn"
            android:text="@string/btnThem"
            android:id="@+id/btnThem"></Button>
        <Button
            style="@style/btn"
            android:text="@string/btnXoa"
            android:id="@+id/btnXoa"
            android:background="@drawable/themthem_select"
            android:layout_marginRight="20dp"></Button>
        <Button
            style="@style/btn"
            android:text="@string/btnSua"
            android:id="@+id/btnSua"></Button>
        <Button
            style="@style/btn"
            android:text="@string/btnLamSach"
            android:id="@+id/btnLamSach"
            android:background="@drawable/themthem_select"></Button>
    </LinearLayout>

</LinearLayout>