<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiaoDien.MainActivity"
    android:orientation="vertical">


    <TextView
        style="@style/tieude"
        android:text="@string/infouser" />

        <TextView
            android:id="@+id/tvThongTin"
            style="@style/textview"
            android:text="Thông tin khách ở đây"></TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <TextView
        style="@style/tieude"
        android:text="@string/phieusuachua" />

    <GridView
        android:id="@+id/GVSuaChua"
        android:layout_width="match_parent"
        android:layout_height="164dp"></GridView>
    <TextView
        style="@style/tieude"
        android:text="@string/dichvu" />


</LinearLayout>