<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GiaoDien.ChiTietDichVu"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/tendv"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTenDV"
            android:text="la sao"
            android:gravity="center"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/soluong"></TextView>

        <EditText
            style="@style/edittext"
            android:id="@+id/txtSoluongDichvu"
            android:gravity="center"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/textview"
            android:text="@string/gia"></TextView>

        <EditText
            style="@style/edittext"
            android:id="@+id/txtGia"
            android:gravity="center"></EditText>
    </LinearLayout>
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/imgHinhChiTiet"
       android:src="@drawable/lotchuot"></ImageView>
</LinearLayout>